--- a/RidgeRegressionModel.ipynb
+++ b/RidgeRegressionModel.ipynb
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 282,
    "id": "81dda76f",
    "metadata": {
     "scrolled": true
@@ -2424,8 +2424,16 @@
     "def ridge_fit(a): # fits model corresponding to alpha\n",
     "    ridge_reg_x = linear_model.Ridge(alpha=a)\n",
     "    ridge_reg_x.fit(train_data, train_labels)\n",
-    "    return ridge_reg_x\n",
-    "\n",
+    "    return ridge_reg_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "id": "2e630536",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def ridge_test(ridge_reg): # sets models predictions in cleaned dataframe\n",
     "    RR_test = ridge_reg.predict(test_data)\n",
     "    prediction = pd.DataFrame()\n",
@@ -2435,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 284,
    "id": "723de4e3",
    "metadata": {},
    "outputs": [],
@@ -2450,8 +2458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "id": "4d4b4299",
+   "execution_count": 285,
+   "id": "e90184f0",
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2477,7 @@
        "<AxesSubplot:xlabel='Alpha_val'>"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2493,7 +2501,8 @@
     "for x in indices:\n",
     "    prediction = ridge_test(ridge_fit(x))\n",
     "    results.loc[x] = [x, find_avg_error(prediction)]\n",
-    "print(\"Optimal alpha based on average error: \\n\" + str(results.loc[results['Average_error'] == results['Average_error'].min()]))\n",
+    "print(\"Optimal alpha based on average error: \\n\" + \\\n",
+    "      str(results.loc[results['Average_error'] == results['Average_error'].min()]))\n",
     "results.plot(x = 'Alpha_val', y='Average_error')"
    ]
   },
